[gd_scene load_steps=3 format=3 uid="uid://cyjejqvy7vq4q"]

[ext_resource type="Script" path="res://scenes/gear_container.gd" id="1_ov4vb"]
[ext_resource type="AudioStream" uid="uid://d4cnxegiuvf44" path="res://assets/audio/tick.wav" id="2_jx61m"]

[node name="GearContainer" type="Node2D"]
script = ExtResource("1_ov4vb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 1400.0
color = Color(0.203922, 0.207843, 0.368627, 1)

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 1080.0
offset_bottom = 1400.0

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_jx61m")

[connection signal="rotation_completed" from="." to="." method="_on_rotation_completed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
